Fix github page

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "/Chat-App-ReelSpeed/",
             "outputPath": "dist/reel-speed-chat",
             "index": "src/index.html",
             "browser": "src/main.ts",
