--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -25,9 +25,12 @@
     "@angular/ssr": "^17.0.8",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mime": "^4.0.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -37,6 +40,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.18.0",
     "angular-cli-ghpages": "^0.6.2",
     "jasmine-core": "~5.1.0",
