--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.1",
     "ngx-toastr": "^18.0.0",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.3",
     "tslib": "^2.3.0",
